--- a/index.html
+++ b/index.html
@@ -1,10 +1,150 @@
-<!-- comentario común -->
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-	</head>
-	<body>
+<head>
+	<meta charset="utf-8">
+	<title>Mi segundo sitio</title>
+</head>
+<body>
+	<nav>
+		<ul>
+			<li><a href="home.html">Home</a></li>
+			<li><a href="servicios.html">Servicios</a></li>
+			<li><a href="productos.html">Productos</a></li>
+			<li><a href="contacto.html">Contacto</a></li>
+		</ul>	
+	</nav>
+	<header>
+		<h1>Mi primer sitio</h1>
+		<h4>Aprendiendo HTML5</h4>
+		<p>
+			Este es mi primer sitio web, aprendiendo etiquetas de HTML.
+		</p>
+		<a href="http://www.google.com">Ir a Google</a>
+	</header>
 
-	</body>
+	<section>
+		<article>
+			<h2>Elemento 1</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<button>Soy un botón</button>
+			<a href="http://www.google.com"><img src="http://icon-icons.com/icons2/317/PNG/512/user-male-icon_34332.png"></a>
+			<hr/>
+		</article>
+
+		<article>
+			<h2>Elemento 2</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<img src="http://images.gofreedownload.net/thumps_middle/user-computer-28193.jpg">
+		</article>
+
+		<article>
+			<h2>Elemento 3</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<img src="https://image.freepik.com/iconos-gratis/computadora-de-escritorio-imac-con-el-raton_318-45005.jpg">
+		</article>
+
+		<article>
+			<table>
+				<tr>
+					<th>Nombre</th>
+					<th>Nota 1</th>
+					<th>Nota 2</th>
+					<th>Promedio</th>
+				</tr>
+				<tr>
+					<td>Daniel</td>
+					<td>8</td>
+					<td>6</td>
+					<td>7</td>
+				</tr>
+				<tr>
+					<td>Laura</td>
+					<td>10</td>
+					<td>8</td>
+					<td>9</td>
+				</tr>
+				<tr>
+					<td>Simón</td>
+					<td>4</td>
+					<td>2</td>
+					<td>3</td>
+				</tr>
+			</table>
+		</article>
+
+	</section>
+
+	<section>
+		<h4>Formulario de Contacto</h4>
+		<form method="POST" action="enviar.php" enctype="multipart/form-data">
+			<label for="Nombre">Nombre:</label>
+			<input type="text" name="Nombre" placeholder="Escribí tu nombre" required>
+
+			 <br>
+
+			 <label for="Correo">Correo:</label>
+			 <input type="email" name="Correo" placeholder="Escribí tu mail" required>
+
+			 <br>
+
+			 <label for="Password">Contraseña:</label>
+			 <input type="Password" name="Password" placeholder="Contraseña" required>
+
+			 <br>
+
+			 <label for="Provincia">Provincia:</label>
+			 <select name="Provincia">
+			 	<option value="BA">Buenos Aires</option>
+			 	<option value="ER">Entre Ríos</option>
+			 	<option value="CH">Chaco</option>
+			 </select>
+
+			 <br>
+
+			 <input type="checkbox" name="tyc" required>
+			 <label for="tyc">Aceptar términos y condiciones</label>
+
+			 <br>
+
+			 <label for="Entrega">Entrega:</label>
+			 <input type="radio" name="Entrega" value="Delivery"> Delivery
+			 <input type="radio" name="Entrega" value="Retira por el local"> Retira por el local
+
+			 <br>
+
+			 <label for="Comentario">Comentario:</label>
+			 <textarea name="Comentario" rows="10" cols="30"></textarea>
+
+			 <br>
+
+			 <input type="file" name="CV">
+
+			 <br>
+
+			 <input type="submit" value="Enviar">
+		</form>
+	</section>
+	
+</body>
 </html>
